# learn_project_python

./: .gitignore  Denis_Protsenko.py  HW_2.py  Home_Work_2.py  Library.py  README.md  add_book.csv  add_book.py  book_list.py  book_write_list.txt  edited_bl.csv  homework1.py  homework_1.py  hw2.py  hw_Kutovyi.py  initial_book_list.csv  library.py  lit_class.py  main.py  pyproject.toml
examples/: context_managers.py  decorators.py  generators.py
home_work/: home_work1.py
homework/: library.py  models.py  publications.py  run.py
homework_2/: book.py  constants.py  decorators.py  library.py  magazine.py  main.py  models.py  publication_list.txt  pyproject.toml
homework_lection2_sergiy_baranov/: main.py  pyproject.toml
