[tool.poetry]
name = "homework-lection2-sergiy-baranov"
version = "0.1.0"
description = ""
authors = ["barskm <barskm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
